examples/test/testpolicy18560.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18560
  namespace: namespace312
spec:
  podSelector:
    matchLabels:
      key22: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value18
      podSelector:
        matchLabels:
          key18: value29
          key20: value11
